src/test/resources/validPrograms/capsule_boxes.frj
class Box {
	mut F f;
	read method read F f() = this.f;
}

class MakeBox {
	method mut Box of(mut F f) = new Box(f);
}

class F {
	method mut F get() = new F();
}

main =
	capsule F f = new F().get(),
	capsule Box b = new MakeBox().of(f),
	imm Box immB = b,
	imm F immF = immB.f(),
	0;
